# aoc

./: Cargo.toml  advent2018.cabal  aoc.cabal  flake.nix  package.yaml  shell.nix
haskell/src/: Utils.hs
haskell/src/Aoc2015/Day1/: puzzle.txt
haskell/src/Aoc2015/Day4/: Day4.hs
haskell/src/Aoc2018/Day11/: Day11.hs
haskell/src/Aoc2018/Day12/: Day12.hs
haskell/src/Aoc2018/Day13/: Day13.hs
haskell/src/Aoc2018/Day14/: Day14.hs
haskell/src/Aoc2018/Day15/: Day15.hs  puzzle.txt
haskell/src/Aoc2018/Day3/: Day3.hs
haskell/src/Aoc2018/Day4/: Day4.hs
haskell/src/Aoc2018/Day8/: Day8.hs
haskell/src/Aoc2018/Day9/: Day9.hs
haskell/test/Test/: Aoc2015.hs
rust/Aoc2021/input/: day01-puzzle.txt  day05-puzzle.txt  day11-puzzle.txt  day2-puzzle.txt  day3-puzzle.txt  day4-puzzle.txt
rust/Aoc2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  utils.rs
rust/Aoc2022/: Cargo.toml
rust/Aoc2022/input/: day01-puzzle.org  day02-puzzle.org  day03-puzzle.org  day04-puzzle.org  day05-puzzle.org  day06-puzzle.org  day07-puzzle.org
rust/Aoc2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  main.rs  utils.rs
src/: Main.hs  Utils.hs
src/Aoc2015/Day1/: Day1.hs  puzzle.txt
src/Aoc2015/Day2/: Day2.hs  puzzle.txt
src/Aoc2015/Day3/: Day3.hs  puzzle.txt
src/Aoc2015/Day4/: Day4.hs  puzzle.txt
src/Aoc2015/Day5/: Day5.hs  puzzle.txt
src/Aoc2018/Day1/: Day1.hs
src/Aoc2018/Day10/: Day10.hs
src/Aoc2018/Day2/: Day2.hs
src/Aoc2018/Day5/: Day5.hs
src/Aoc2018/Day6/: Day6.hs
src/Aoc2018/Day7/: Day7.hs
src/Aoc2021/src/: day1.rs  day2.rs  day3.rs  main.rs
src/Day1/: Day1.hs  Frequency.hs  Part1.hs  puzzle.txt
src/Day10/: Day10.hs  puzzle.txt
src/Day11/: Day11.hs  puzzle.txt
src/Day12/: Day12.hs  puzzle.txt
src/Day13/: Day13.hs  puzzle.txt
src/Day14/: Day14.hs  puzzle.txt
src/Day15/: Day15.hs
src/Day2/: Day2.hs  puzzle.txt
src/Day3/: Day3.hs  puzzle.txt
src/Day4/: Day4.hs
src/Day5/: Day5.hs  puzzle.txt
src/Day6/: Day6.hs  puzzle.txt
src/Day7/: Day7.hs  puzzle.txt
src/Day8/: Day8.hs  puzzle.txt
src/Day9/: Day9.hs  puzzle.txt
test/: Main.hs
test/Test/: Aoc2015.hs  Aoc2018.hs  Utils.hs
