name:                advent2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent2018#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent2018
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Day1.Day1
                     , Day2.Day2
                     , Day3.Day3
                     , Day4.Day4
                     , Day5.Day5
                     , Day6.Day6
                     , Day7.Day7
                     , Day8.Day8
                     , Day9.Day9
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , microlens-platform
                     , vector
  ghc-options:         -Wall
